kubernetes/pod.yml
kind: Pod
apiVersion: v1
metadata:
  name: express-app
  labels:
    app: express
spec:
  containers:
  - name: express-app
    image: localhost:5000/express:latest
